--- a/build.xml
+++ b/build.xml
@@ -21,18 +21,18 @@
 	<condition property="osys" value="unix">
 			<os family="unix"/>
 	</condition>
-
+		
 	<!-- =================================================================================== -->
 
+	<property name="appName" value="geosource" />
 	<property name="version" value="2.9.0" />
-    <property name="subVersion" value="SNAPSHOT" />
-	<property name="javaVersion" value="1.5.0" /> <!-- Minimum version required -->
+  <property name="subVersion" value="b1" />
+	<property name="javaVersion" value="1.6.0" /> <!-- Minimum version required -->
 	<property name="jre_url" value="http://java.sun.com/javase/downloads" />
 	<property name="OS" value="Compiled on ${os.name} (${osys})" />
 	<property name="propsdir" value="../.props" />
-	<property name="ant.build.javac.target" value="1.5"/>
+	<property name="ant.build.javac.target" value="1.6"/>
 	<property name="debugOn" value="on"/> <!-- on off true false yes no -->
-    <property name="thesaurusUrl" value="https://geonetwork.svn.sourceforge.net/svnroot/geonetwork/utilities/gemet/thesauri" />
 
 	<!-- =================================================================================== -->
 	
@@ -45,58 +45,23 @@
 	        classpath="launch4j/${osys}/launch4j.jar:launch4j/${osys}/lib/xstream.jar"/>
 
 	<!-- =================================================================================== -->
-
-    <target name="thesaurusDownload">
-        <mkdir	dir ="../web/target/thesauri" />
-
-        <get src="${thesaurusUrl}/gemet.rdf"
-        	dest="../web/target/thesauri/gemet.rdf" usetimestamp="true" />
-
-        <get src="${thesaurusUrl}/inspire-service-taxonomy.rdf"
-             dest="../web/target/thesauri/inspire-service-taxonomy.rdf" usetimestamp="true" />
-
-         <get src="${thesaurusUrl}/inspire-theme.rdf"
-             dest="../web/target/thesauri/inspire-theme.rdf" usetimestamp="true" />
-    </target>
-
-    <target name="inspireDbSettings">
-        <mkdir	dir ="../web/target/inspire" />
-
-        <copy file="../web/target/geonetwork/WEB-INF/classes/setup/sql/data/data-db-default.sql" tofile="../web/target/inspire/data-db-default.sql" overwrite="true"/>
-        <replace file="../web/target/inspire/data-db-default.sql">
-            <replacefilter>
-                <replacetoken><![CDATA[INSERT INTO Settings VALUES (721,720,'enable','false');]]></replacetoken>
-                <replacevalue><![CDATA[INSERT INTO Settings VALUES (721,720,'enable','true');]]></replacevalue>
-            </replacefilter>
-
-            <replacefilter>
-                <replacetoken><![CDATA[INSERT INTO Settings VALUES (722,720,'enableSearchPanel','false');]]></replacetoken>
-                <replacevalue><![CDATA[INSERT INTO Settings VALUES (722,720,'enableSearchPanel','true');]]></replacevalue>
-            </replacefilter>
-
-            <replacefilter>
-                <replacetoken><![CDATA[INSERT INTO Settings VALUES (913,910,'enableInspireView','false');]]></replacetoken>
-                <replacevalue><![CDATA[INSERT INTO Settings VALUES (913,910,'enableInspireView','true');]]></replacevalue>
-            </replacefilter>
-        </replace>
-    </target>
-
-    <target name="inspireTarget" depends="thesaurusDownload,inspireDbSettings" />
-
-    <target name="setProperties">
+	<target name="clean-gs">
+		<delete file="../web/target/geonetwork/WEB-INF/data/config/schema_plugins/iso19139/sample-data/*.mef"/>
+	</target>
+	<target name="setProperties">
 	
 		<delete	dir ="${propsdir}" />
 		<mkdir	dir ="${propsdir}" />
 
 		<exec executable="git" dir=".." output="git.properties">
-		    <arg value="remote" />
-		    <arg value="-v" />
+			<arg value="remote" />
+			<arg value="-v" />
 		</exec>
 		<property prefix="git" file="git.properties"/>
 		
 		<exec executable="git" dir=".." output="git2.properties">
-		    <arg value="log" />
-		    <arg value="--max-count=1" />
+			<arg value="log" />
+			<arg value="--max-count=1" />
 		</exec>
 		<property prefix="git2" file="git2.properties"/>
 	
@@ -122,7 +87,7 @@
 
 			<entry key="git_revision" value="${git2.commit}"/>
 			<entry key="git_url" value="${git.origin}"/>
-					  
+			
 		</propertyfile>
 		
 		<!-- make sure all files that need have version numbers etc updated -->
@@ -138,18 +103,20 @@
 			<replacefilter token="@subVersion@" property="subVersion"/>
 			<replacefilter token="@javaVersion@" property="javaVersion"/>
 		</replace>
-    	
-    	<!-- Modify the config-gui.xml replacing the default view setting with a variable $defaultGUI that can be used to 
-    		 configure the selected view during the installation process. The choice depends on the userInputPanel.xml radio selection -->
 
-    	<replace file="../web/target/geonetwork/WEB-INF/config-gui.xml" >
-    		<replacefilter>
-    			<replacetoken><![CDATA[<client type="redirect" widget="false" url="main.home" />]]></replacetoken>
-    			<replacevalue><![CDATA[${defaultGUI}]]></replacevalue>
-    		</replacefilter>
-    	</replace>
-    	
-    	<!-- help file -->
+	    <!-- Windows with JRE installer build -->
+	    <copy 	file="../installer/installer-config-win-jre.xml" 
+	    		tofile="${propsdir}/installer-config-win-jre.xml" 
+	    		filtering="on" overwrite="yes"/>
+
+		<replace 	file="${propsdir}/installer-config-win-jre.xml"
+			propertyFile="../web/src/main/webapp/WEB-INF/server.prop">
+			<replacefilter token="@version@" property="version"/>
+			<replacefilter token="@subVersion@" property="subVersion"/>
+			<replacefilter token="@javaVersion@" property="javaVersion"/>
+		</replace>
+
+		<!-- help file -->
 	    <copy 	file="../docs/readme.html" 
 	    		tofile="${propsdir}/readme.html" 
 	    		filtering="on" overwrite="yes"/>
@@ -188,33 +155,26 @@
 
 	<!-- =================================================================================== -->
 
-	<target name="installer" depends="setProperties,inspireTarget">
+	<target name="installer" depends="setProperties">
+		
+		<property file="../web/src/main/webapp/WEB-INF/server.prop"/>
+		
+		<delete dir="../${appName}-${release}"/>
+		<mkdir  dir="../${appName}-${release}"/>
 
-        <ant dir="." target="jarinstall"  />
-		<ant dir="." target="wininstall"  />	
+		<echo message="Building platform independent installer on ${osys} using IzPack"/>
 
+		<izpack	input="${propsdir}/installer-config.xml" 
+			output="../${appName}-${release}/${appName}-install-${release}-${subVersion}.jar" 
+					installerType="standard" 
+					basedir="${basedir}"/>
+
+		<!--<ant dir="." target="wininstall"  />-->	
+	
+	<checksum file="../${appName}-${release}/${appName}-install-${release}-${subVersion}.jar" forceOverwrite="yes"/>
+		
 	</target>
-
-    <!-- =================================================================================== -->
-
-    <target name="jarinstall" depends="setProperties,inspireTarget">
-
-        <property file="../web/src/main/webapp/WEB-INF/server.prop"/>
-
-        <delete dir="../geonetwork-${release}"/>
-        <mkdir  dir="../geonetwork-${release}"/>
-
-        <echo message="Building platform independent installer on ${osys} using IzPack"/>
-
-        <izpack	input="${propsdir}/installer-config.xml"
-            output="../geonetwork-${release}/geonetwork-install-${release}-${subVersion}.jar"
-                    installerType="standard"
-                    basedir="${basedir}"/>
-
-        <checksum file="../geonetwork-${release}/geonetwork-install-${release}-${subVersion}.jar" forceOverwrite="yes"/>
-
-    </target>
-
+	
 	<!-- =================================================================================== -->
 
 	<target name="wininstall">
@@ -225,15 +185,45 @@
 		<echo message="Building Windows installer on ${osys} using launch4j"/>
 
 		<launch4j configFile="${basedir}/launch4j/launch4jConfig.xml"
-			jar="../geonetwork-${release}/geonetwork-install-${release}-${subVersion}.jar"
-			outfile="../geonetwork-${release}/geonetwork-install-${release}-${subVersion}.exe"
+			jar="../${appName}-${release}/${appName}-install-${release}-${subVersion}.jar"
+			outfile="../${appName}-${release}/${appName}-install-${release}-${subVersion}.exe"
 			txtFileVersion="${version}-${subVersion}-${date}" 
 			txtProductVersion="${version}-${subVersion}" 
 			fileVersion="${version}.0" 
 			productVersion="${version}.0"/>
 
-	<checksum file="../geonetwork-${release}/geonetwork-install-${release}-${subVersion}.exe" forceOverwrite="yes"/>
+	<checksum file="../${appName}-${release}/${appName}-install-${release}-${subVersion}.exe" forceOverwrite="yes"/>
 		
 	</target>
+
+	<!-- =================================================================================== -->
+
+	<target name="wininstall-jre">
+		<!-- create a Windows installer using launch4j -->
+
+		<property file="../web/src/main/webapp/WEB-INF/server.prop"/>
+
+		<izpack	input="${propsdir}/installer-config-win-jre.xml" 
+			output="../${appName}-${release}/${appName}-install-win-jre-${release}-${subVersion}.jar" 
+					installerType="standard" 
+					basedir="${basedir}"/> 
+
+		<checksum file="../${appName}-${release}/${appName}-install-win-jre-${release}-${subVersion}.jar" forceOverwrite="yes"/>
+		
+		<echo message="Building Windows installer with JRE on ${osys} using launch4j"/>
+
+		<launch4j configFile="${basedir}/launch4j/launch4jConfig-jre.xml"
+			jar="../${appName}-${release}/${appName}-install-win-jre-${release}-${subVersion}.jar"
+			outfile="../${appName}-${release}/${appName}-install-with-jre-${release}-${subVersion}.exe"
+			txtFileVersion="${version}-${subVersion}-${date}" 
+			txtProductVersion="${version}-${subVersion}" 
+			fileVersion="${version}.0" 
+			productVersion="${version}.0"/>
+
+	<checksum file="../${appName}-${release}/${appName}-install-with-jre-${release}-${subVersion}.exe" forceOverwrite="yes"/>
+		
+	</target>
+
+	<!-- =================================================================================== -->
 
 </project>
