--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
 
 	<property name="appName" value="geosource" />
 	<property name="version" value="2.9.0" />
-  <property name="subVersion" value="b1" />
+  <property name="subVersion" value="rc0" />
 	<property name="javaVersion" value="1.6.0" /> <!-- Minimum version required -->
 	<property name="jre_url" value="http://java.sun.com/javase/downloads" />
 	<property name="OS" value="Compiled on ${os.name} (${osys})" />
